refactor: improve null safety and fix minor issues
Introduced `@NonNull` annotations to enhance null safety across multiple classes. Fixed typos in method names and comments, removed unnecessary semicolons, and simplified a method call for better readability and maintainability.